[GStreamer][MSE] ASSERT in MediaSourceClientGStreamer::addSourceBuffer https://bugs.webkit.org/show_bug.cgi?id=140119

Reviewed by Carlos Garcia Campos.

* platform/graphics/gstreamer/WebKitMediaSourceGStreamer.cpp:
(WebCore::MediaSourceClientGStreamer::addSourceBuffer): Use a raw
pointer for the ghost pad, its reference is then taken once attached
to the parent element.

Canonical link: https://commits.webkit.org/158256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178169 268f45cc-cd09-0410-ab3c-d52691b4dbfc